# colombo-DeepFlame

./: Allwclean  Allwmake  README.md  bashrc.in  configure.sh  install.sh  pyproject.toml
applications/solvers/df0DFoam/: EEqn.H  YEqn.H  createFields.H  df0DFoam.C
applications/solvers/dfHighSpeedFoam/: createFields.H  dfHighSpeedFoam.C  rhoEEqn.H  rhoYEqn.H
applications/solvers/dfLowMachFoam/: YEqn.H  YEqn_RR.H  createFields.H  dfLowMachFoam.C
applications/solvers/dfSprayFoam/: EEqn.H  YEqn.H  createFields.H  dfSprayFoam.C
docs/: requirements.txt
docs/source/: citation.rst  conf.py  contributors.rst  gpl.rst  index.rst  pr.rst  utility.rst
docs/source/qs/: download_dnn_models.rst  examples.rst  input.rst  install.rst
docs/source/solvers/: df0DFoam.rst  dfHighSpeedFoam.rst  dfLowMachFoam.rst  dfSprayFoam.rst
examples/dfHighSpeedFoam/oneD_detonationH2/: Allrun  H2_Li.xml
mechanisms/C2H5OH/: ethanol66.yaml
mechanisms/CH4/: drm19.yaml  gri30.yaml
mechanisms/H2/: H2_AR.xml  H2_Ja.xml  ReadMe.md
src/dfCanteraMixture/: CanteraMixture.C  CanteraMixture.H
src/dfChemistryModel/: dfChemistryModel.C  dfChemistryModel.H
src/dfChemistryModel/DNNInferencer/: CMakeLists.txt  DNNInferencer.H  DNNInferencer.cpp  DynamicBuffer.C  DynamicBuffer.H  GpuProblem.C  GpuProblem.H  GpuSolution.C  GpuSolution.H
test/: Allclean  Allrun  CMakeLists.txt  corrtest.cpp  oneD_detonationH2  pytorchIntegrator
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/: Allclean  Allrun  inference.py  pytorchDNN
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/0/: H  H2  H2O  N2  O  O2  OH  T  p
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/constant/: CanteraTorchProperties
test/dfLowMachFoam/twoD_reactingTGV/H2/cvodeSolver/system/: blockMeshDict  controlDict  funkySetFieldsDict  fvSolution  sample
(+174 files in other folders)
